# space-ham

./: .gitmodules  ACKNOWLEDGMENTS-AND-LICENSING  CMakeLists.txt  COPYING-HEADER  README.md  esp32-partition-table.csv  fatfs-efr32.c  fatfs-xmodem.c  flash.c  i2c.c  iadc.c  linklist.c  main.c  optimize-pid.pl  pid.c  pwm.c  rotor.c  rtcc.c  sat.c  sdkconfig  serial.c  set-time.pl  strutil.c  systick.c
calibrations/: 2023-08-19  old big rotor pids  README
fatfs/: .ff.c.swp  ff.c
i2c/: ads111x.c  qmc5883l.c  rtc-ds3231.c
include/: config.h  fatfs-efr32.h  flash.h  i2c.h  iadc.h  linklist.h  pid.h  platform.h  pwm.h  rotor.h  rtcc.h  sat.h  serial.h  stars.h  strutil.h  systick.h
include/i2c/: ads111x.h  rtc-ds3231.h
main/: CMakeLists.txt  config.c  fatfs-efr32.c  fatfs-util.c  fatfs-xmodem.c  flash.c  gnss.c  http_get.c  i2c.c  iadc.c  idf_component.yml  lcd.c  main.c  rotor.c  rtcc.c  sat.c  serial.c  stars.c  strutil.c  systick.c  time_sync.c  vi.c  wifi.c
main/i2c/: ads111x.c  drv8830.c  mmc5603nj.c  mxc4005xc.c  qmc5883l.c  rtc-ds3231.c
main/include/: config.h  fatfs-util.h  gnss.h  http_get.h  i2c.h  lcd.h  main.h  platform.h  rotor.h  sat.h  strutil.h  time_sync.h  wifi.h
main/include/i2c/: drv8830.h  mmc5603nj.h  mxc4005xc.h
sgp-c-lib/: ChangeLog  DOCUMENTATION  README  main.c  makefile  sgp.h  sgp0.c  sgp4sdp4.c  sgp8sdp8.c  sgp_conv.c  sgp_deep.c  sgp_int.h  sgp_math.c  sgp_time.c  test_sgp-c-lib  testing.c
src/: fatfs-xmodem.c  i2c.c  linklist.c  serial.c
src/fatfs/: ffconf.h
src/include/: i2c.h  iadc.h  sat.h  serial.h
src/include/i2c/: qmc5883l.h
